Fix useful links alignment

--- a/stylesheets/layout.scss
+++ b/stylesheets/layout.scss
@@ -224,4 +224,8 @@ blockquote {
     li { display: inline; }
 }
 
-.useful-links { list-style: none; }
+.useful-links {
+  list-style: none;
+
+  padding: 0;
+}
